--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <div class="add-margin"></div>
         <ul class="nav navmenu-nav"> <!--- Menu -->
             <li><a href="#home" class="page-scroll">Home</a></li>
-            <li><a href="#meet-us" class="page-scroll">Overview</a></li>
-            <li><a href="#services" class="page-scroll">Services</a></li>
-            <li><a href="#works" class="page-scroll">Portfolio</a></li>
-            <li><a href="#about-us" class="page-scroll">About Us</a></li>
-            <li><a href="#contact" class="page-scroll">Contact Us</a></li>
+            <li><a href="#chi-siamo" class="page-scroll">Alba Studio</a></li>
+            <li><a href="#servizi" class="page-scroll">Servizi</a></li>
+            <li><a href="#progetti" class="page-scroll">Progetti</a></li>
+            <li><a href="#dicono-di-noi" class="page-scroll">Dicono di noi</a></li>
+            <li><a href="#contatti" class="page-scroll">Contatti</a></li>
         </ul><!--- End Menu -->
     </div> <!--- End Off Canvas Side Menu -->
 
@@ -74,26 +74,26 @@
             </nav>
 
             <div class="content">
-                <h4>We've got the special power</h4>
+                <h4>Alba Studio - Arch. Andrea Albanese</h4>
                 <hr>
                 <div class="header-text btn">
                     <h1><span id="head-title"></span></h1>
                 </div>
             </div>
 
-            <a href="#meet-us" class="down-btn page-scroll">
+            <a href="#chi-siamo" class="down-btn page-scroll">
                 <span class="fa fa-angle-down"></span>
             </a>
         </div>
     </div>
 
     <!-- Meet Us Section -->
-    <div id="meet-us">
+    <div id="chi-siamo">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="section-title">
-                        <h2>Meet Us</h2>
+                        <h2>Chi Siamo</h2>
                         <hr>
                     </div>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
@@ -117,12 +117,12 @@
     </div>
 
     <!-- Services Section -->
-    <div id="services">
+    <div id="servizi">
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="section-title">
-                        <h2>Services</h2>
+                        <h2>Servizi</h2>
                         <hr>
                     </div>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
@@ -134,24 +134,53 @@
             <div class="row">
                 <div class="col-md-4 col-sm-4">
                     <div class="service">
-                        <span class="fa fa-book fa-3x"></span>
-                        <h4>Branding</h4>
+                        <span class="fa fa-home fa-3x"></span>
+                        <h4>Certificazione Energetica</h4>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis. </p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-4">
                     <div class="service">
-                        <span class="fa fa-bicycle fa-3x"></span>
-                        <h4>Web Devepment</h4>
+                        <span class="fa fa-money fa-3x"></span>
+                        <h4>Computi e Valutazioni</h4>
                         <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Accusamus et. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-4">
                     <div class="service">
-                        <span class="fa fa-plug fa-3x"></span>
-                        <h4>App Design</h4>
+                        <span class="fa fa-user fa-3x"></span>
+                        <h4>Direzione Lavori e Sicurezza</h4>
+                        <p>Nulla vitae elit libero, a pharetra augue. At vero eos et accusamus et iusto odio dignissimos ducimus. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
+                    </div>
+                </div>
+
+              </div>
+
+              <div class="space"></div>
+
+              <div class="row">
+                <div class="col-md-4 col-sm-4">
+                    <div class="service">
+                        <span class="fa fa-desktop fa-3x"></span>
+                        <h4>modellazione 3D e Rendering</h4>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis. </p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-4">
+                    <div class="service">
+                        <span class="fa fa-file-text-o fa-3x"></span>
+                        <h4>Pratiche Edilizie</h4>
+                        <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Accusamus et. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-4">
+                    <div class="service">
+                        <span class="fa fa-building-o fa-3x"></span>
+                        <h4>Progettazione Architettonica</h4>
                         <p>Nulla vitae elit libero, a pharetra augue. At vero eos et accusamus et iusto odio dignissimos ducimus. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
                     </div>
                 </div>
@@ -170,7 +199,7 @@
     </div>
 
     <!-- Portfolio Section -->
-    <div id="works">
+    <div id="progetti">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
@@ -190,11 +219,11 @@
                         <div class="hover-bg">
                             <a href="#">
                                 <div class="hover-text">
-                                    <h5>Logo Design</h5>
-                                    <p class="lead">Client Seal</p>
+                                    <h5>Progettazione ed Autorizzazione</h5>
+                                    <p class="lead">Casa A</p>
                                     <div class="hline"></div>
                                 </div>
-                                <img src="img/portfolio/01.jpg" class="img-responsive" alt="...">
+                                <img src="img/progetti/casa-A/casaA.jpg" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -204,11 +233,11 @@
                         <div class="hover-bg">
                             <a href="#">
                                 <div class="hover-text">
-                                    <h5>Stationery</h5>
-                                    <p class="lead">Design Project</p>
+                                    <h5>modellazione 3D e Rendering</h5>
+                                    <p class="lead">Centro Ludico</p>
                                     <div class="hline"></div>
                                 </div>
-                                <img src="img/portfolio/02.jpg" class="img-responsive" alt="...">
+                                <img src="img/progetti/Centro-Ludico/centroLudico.jpg" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -218,12 +247,12 @@
                         <div class="hover-bg">
                             <a href="#">
                                 <div class="hover-text">
-                                    <h5>Branding</h5>
-                                    <p class="lead">Metalbrand</p>
+                                    <h5>Progettazione</h5>
+                                    <p class="lead">Nido Damma</p>
                                     <div class="hline"></div>
                                 </div>
                             </a>
-                            <img src="img/portfolio/03.jpg" class="img-responsive" alt="...">
+                            <img src="img/progetti/Nido-Damma/nidoDamma.jpg" class="img-responsive" alt="...">
                         </div>
                     </div>
                 </div>
@@ -232,12 +261,12 @@
                         <div class="hover-bg">
                             <a href="#">
                                 <div class="hover-text">
-                                    <h5>Business Card</h5>
-                                    <p class="lead">Clothing Line</p>
+                                    <h5>Direzione Lavori e Sicurezza</h5>
+                                    <p class="lead">Perle di Ortigia</p>
                                     <div class="hline"></div>
                                 </div>
                             </a>
-                            <img src="img/portfolio/04.jpg" class="img-responsive" alt="...">
+                            <img src="img/progetti/Perle-di-Ortigia/perleOrtigia.jpg" class="img-responsive" alt="...">
                         </div>
                     </div>
                 </div>
@@ -271,7 +300,7 @@
     </div>
 
     <!-- About Us Section -->
-    <div id="about-us">
+    <div id="dicono-di-noi">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
@@ -373,7 +402,7 @@
     </div>
 
     <!-- Contact Section -->
-    <div id="contact">
+    <div id="contatti">
         <div class="container">
             <div class="section-title text-center">
                 <h2>Contact Us</h2>
@@ -446,7 +475,7 @@
     <script>
       $(function(){
           $("#head-title").typed({
-            strings: ["We make websites^1000", "24/7 available for hire^1000" ,"Web design with diffence^1000"],
+            strings: ["Progettazione Architettonica^1000", "Pratiche Edilizie^1000" ,"Modellazione 3D e Rendering^1000","Direzione Lavori e Sicurezza^1000","Certificazione Energetica^1000","Computi e Valutazioni^1000"],
             typeSpeed: 100,
             loop: true,
             startDelay: 100
