--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" type="text/css"  href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
 
+    <link rel="stylesheet" type="text/css"  href="css/override.css">
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
@@ -57,10 +58,10 @@
         <div class="add-margin"></div>
         <ul class="nav navmenu-nav"> <!--- Menu -->
             <li><a href="#home" class="page-scroll">Home</a></li>
-            <li><a href="#chi-siamo" class="page-scroll">Alba Studio</a></li>
-            <li><a href="#servizi" class="page-scroll">Servizi</a></li>
-            <li><a href="#progetti" class="page-scroll">Progetti</a></li>
-            <li><a href="#dicono-di-noi" class="page-scroll">Dicono di noi</a></li>
+            <li><a href="#chi-siamo" class="page-scroll">Profilo</a></li>
+            <li><a href="#servizi" class="page-scroll">Attivit&aacute;</a></li>
+            <li><a href="#progetti" class="page-scroll">Portfolio</a></li>
+            <li><a href="#team" class="page-scroll">A-Team</a></li>
             <li><a href="#contatti" class="page-scroll">Contatti</a></li>
         </ul><!--- End Menu -->
     </div> <!--- End Off Canvas Side Menu -->
@@ -74,10 +75,11 @@
             </nav>
 
             <div class="content">
-                <h4>Alba Studio - Arch. Andrea Albanese</h4>
+                <h2>Andrea Albanese Architetto</h2>
+                <h2 style="font-size: 36px;">- Alba Studio -</h2>
                 <hr>
                 <div class="header-text btn">
-                    <h1><span id="head-title"></span></h1>
+                    <h2><span id="head-title"></span></h2>
                 </div>
             </div>
 
@@ -93,10 +95,12 @@
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="section-title">
-                        <h2>Chi Siamo</h2>
+                        <h2>Profilo</h2>
                         <hr>
                     </div>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+                    <p>Albastudio nasce nel 2008 a Siracusa dalla passione creativa di un giovane architetto, Andrea Albanese, la cui esperienza professionale intrapresa già nel periodo universitario ha contribuito alla formazione nel corso degli anni di un professionista in grado di affrontare la progettazione a 360 gradi. </p>
+                    <p>Lo studio di architettura si concretizza come un laboratorio creativo, in cui la continua ricerca ed approccio progettuale spaziano da un’attenta analisi delle potenzialità ed input del contesto territoriale del singolo caso allo studio delle soluzioni ambientali e tecnologiche più adatte, al fine di dare una propria identità ad ogni atto compositivo. </p>
+                    <p>Albastudio, avvalendosi in maniera dinamica di collaboratori ed esperti di settore, ha maturato esperienza nel campo della progettazione di residenze unifamiliari, spazi collettivi, interior design associato a complementi di arredo e ristrutturazione edilizie private e commerciali, con un interesse sempre più crescente verso restituzioni grafiche tridimensionali e fotorealistiche e soluzioni tecnologiche di ecosostenibilità e bioarchitettura.</p>
                     <a href="#services" class="down-btn page-scroll">
                         <span class="fa fa-angle-down"></span>
                     </a>
@@ -122,29 +126,28 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="section-title">
-                        <h2>Servizi</h2>
+                        <h2>Attivit&aacute;</h2>
                         <hr>
                     </div>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+                    <p>Alla progettazione architettonica Albastudio accompagna parallelamente l’esigenza burocratica, espletata nella redazione di pratiche edili, piani di sicurezza, computi metrici, studi di fattibilità e analisi dei costi, il tutto nella piena disponibilità e capacità di report e mediazione con clienti ed enti pubblici. </p>
+                    <p>Essenziale in ogni esperienza è il costante dialogo tra la figura professionale e quella esecutiva dell’opera, in grado di fornire una capacità di controllo del progetto in tutte le sue fasi, dalla progettazione al cantiere, dallo schizzo all’opera compiuta..</p>
                 </div>
             </div>
 
             <div class="space"></div>
 
             <div class="row">
-                <div class="col-md-4 col-sm-4">
-                    <div class="service">
-                        <span class="fa fa-home fa-3x"></span>
-                        <h4>Certificazione Energetica</h4>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis. </p>
-                    </div>
-                </div>
+              <div class="col-md-4 col-sm-4">
+                  <div class="service">
+                      <span class="fa fa-building-o fa-3x"></span>
+                      <h4>Progettazione Architettonica</h4>
+                  </div>
+              </div>
 
                 <div class="col-md-4 col-sm-4">
                     <div class="service">
                         <span class="fa fa-money fa-3x"></span>
                         <h4>Computi e Valutazioni</h4>
-                        <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Accusamus et. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </p>
                     </div>
                 </div>
 
@@ -152,7 +155,6 @@
                     <div class="service">
                         <span class="fa fa-user fa-3x"></span>
                         <h4>Direzione Lavori e Sicurezza</h4>
-                        <p>Nulla vitae elit libero, a pharetra augue. At vero eos et accusamus et iusto odio dignissimos ducimus. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
                     </div>
                 </div>
 
@@ -165,7 +167,6 @@
                     <div class="service">
                         <span class="fa fa-desktop fa-3x"></span>
                         <h4>modellazione 3D e Rendering</h4>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis. </p>
                     </div>
                 </div>
 
@@ -173,17 +174,16 @@
                     <div class="service">
                         <span class="fa fa-file-text-o fa-3x"></span>
                         <h4>Pratiche Edilizie</h4>
-                        <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Accusamus et. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-4">
                     <div class="service">
-                        <span class="fa fa-building-o fa-3x"></span>
-                        <h4>Progettazione Architettonica</h4>
-                        <p>Nulla vitae elit libero, a pharetra augue. At vero eos et accusamus et iusto odio dignissimos ducimus. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
+                        <span class="fa fa-home fa-3x"></span>
+                        <h4>Certificazione Energetica</h4>
                     </div>
                 </div>
+
             </div>
             <a href="#works" class="down-btn page-scroll">
                 <span class="fa fa-angle-down"></span>
@@ -204,7 +204,7 @@
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="section-title">
-                        <h2>Our Latest Projects</h2>
+                        <h2>Portfolio</h2>
                         <hr>
                     </div>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
@@ -300,12 +300,12 @@
     </div>
 
     <!-- About Us Section -->
-    <div id="dicono-di-noi">
+    <div id="team">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="section-title">
-                        <h2>About Us</h2>
+                        <h2>A-Team</h2>
                         <hr>
                     </div>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
@@ -317,9 +317,9 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-4">
                             <div class="team">
-                                <img src="img/team/02.jpg" class="img-responsive img-circle" alt="...">
+                                <img src="img/team/03.jpg" class="img-responsive img-circle" alt="...">
                                 <br>
-                                <h4>Lian Gwapa</h4>
+                                <h4>Andrea Albanese</h4>
                                 <p class="small">CEO/Founder</p>
                                 <hr>
                             </div>
@@ -329,7 +329,7 @@
                             <div class="team">
                                 <img src="img/team/04.jpg" class="img-responsive img-circle" alt="...">
                                 <br>
-                                <h4>Jenn Pereira</h4>
+                                <h4>Francesca Aliffi</h4>
                                 <p class="small">Web Coder</p>
                                 <hr>
                             </div>
@@ -337,7 +337,7 @@
 
                         <div class="col-md-4 col-sm-4">
                             <div class="team">
-                                <img src="img/team/03.jpg" class="img-responsive img-circle" alt="...">
+                                <img src="img/team/02.jpg" class="img-responsive img-circle" alt="...">
                                 <br>
                                 <h4>Alan Podemski</h4>
                                 <p class="small">Web Designer</p>
@@ -405,22 +405,24 @@
     <div id="contatti">
         <div class="container">
             <div class="section-title text-center">
-                <h2>Contact Us</h2>
+                <h2>Contatti</h2>
                 <hr>
             </div>
             <div class="space"></div>
 
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <address>
-                        <strong>Address</strong><br>
+                        <strong>Recapiti</strong><br>
                         <br>
-                        ThemeForces.Com<br>
-                        Igbalangao, Bugasong, Anitque<br>
-                        5704, Philippines<br>
-                        Phone: (123) 456-7890
+                        Albanese Architetto Andrea<br>
+                        Via Luciano Patania 2<br>
+                        96100, Siracusa<br>
+                        Cell: 338 4352 807<br>
+                        Mail: <a href="mailto:albanese@albastudio.it">albanese@albastudio.it</a> <br>
+                        Pec: <a href="mailto">andrea.albanese@archiworldpec.it</a> <br>
                         <ul class="social">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="https://www.facebook.com/andrea.albanese.353" target="_blank"><span class="fa fa-facebook"></span></a></li>
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                             <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                             <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
@@ -428,7 +430,7 @@
                     </address>
                 </div>
 
-                <div class="col-md-9">
+                <div class="col-md-8">
                     <form autocomplete="off">
                         <div class="row">
                             <div class="col-md-6">
@@ -453,7 +455,7 @@
     <nav id="footer">
         <div class="container">
              <div class="pull-left">
-                <p>2014 © Arcadia. All Rights Reserved. Coded by <a href="https://dribbble.com/jennpereira">Jenn</a> & Designed by <a href="https://dribbble.com/alanpodemski">Alan</a></p>
+                <p>2016 © Albastudio. Tutti i diritti reservati. </p>
             </div>
             <div class="pull-right">
                 <a href="#home" class="page-scroll">Back to Top <span class="fa fa-angle-up"></span></a>
