--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <p>Albastudio nasce nel 2008 a Siracusa dalla passione creativa di un giovane architetto, Andrea Albanese, la cui esperienza professionale intrapresa già nel periodo universitario ha contribuito alla formazione nel corso degli anni di un professionista in grado di affrontare la progettazione a 360 gradi. </p>
                     <p>Lo studio di architettura si concretizza come un laboratorio creativo, in cui la continua ricerca ed approccio progettuale spaziano da un’attenta analisi delle potenzialità ed input del contesto territoriale del singolo caso allo studio delle soluzioni ambientali e tecnologiche più adatte, al fine di dare una propria identità ad ogni atto compositivo. </p>
                     <p>Albastudio, avvalendosi in maniera dinamica di collaboratori ed esperti di settore, ha maturato esperienza nel campo della progettazione di residenze unifamiliari, spazi collettivi, interior design associato a complementi di arredo e ristrutturazione edilizie private e commerciali, con un interesse sempre più crescente verso restituzioni grafiche tridimensionali e fotorealistiche e soluzioni tecnologiche di ecosostenibilità e bioarchitettura.</p>
-                    <a href="#services" class="down-btn page-scroll">
+                    <a href="#servizi" class="down-btn page-scroll">
                         <span class="fa fa-angle-down"></span>
                     </a>
                 </div>
@@ -185,7 +185,7 @@
                 </div>
 
             </div>
-            <a href="#works" class="down-btn page-scroll">
+            <a href="#progetti" class="down-btn page-scroll">
                 <span class="fa fa-angle-down"></span>
             </a>
         </div>
@@ -276,7 +276,7 @@
         <div class="text-center">
             <a href="#" class="btn read-more-btn">Check on Dribbble</a>
             <br>
-            <a href="#about-us" class="down-btn page-scroll"><span class="fa fa-angle-down"></span></a>
+            <a href="#team" class="down-btn page-scroll"><span class="fa fa-angle-down"></span></a>
         </div>
     </div>
 
@@ -361,7 +361,7 @@
             </div>
 
             <div class="text-center">
-                <a href="#contact" class="page-scroll down-btn">
+                <a href="#contatti" class="page-scroll down-btn">
                     <span class="fa fa-angle-down"></span>
                 </a>
             </div>
